--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "helmet": "^3.15.0",
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
+    "sequelize": "^4.41.2",
     "sqlite": "^3.0.0"
   }
 }
